Made class with methods

--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tamagotchi</title>
+    <title>Tamagotchi Pet</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 id="name">Fluff</h1>
+    <h2 id="hunger"></h2>
+    <h2 id="sleepiness"></h2>
+    <h2 id="boredom"></h2>
+    <h2 id="age"></h2>
+
+
+    <button id="feed">Feed</button>
+    <button id="play">Play</button>
+    <button id="sleep">Sleep</button>
     
+
+
+
+
+
+
+    <script src="app.js"></script>
 </body>
 </html>
