--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <button id="feed">Feed</button>
     <button id="play">Play</button>
     <button id="sleep">Sleep</button>
+    <button id="modeSwitch">Lights</button>
     
 
 
