Prompt to rename Tamagotchi

--- a/index.html
+++ b/index.html
@@ -7,11 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="name">Fluff</h1>
+    <h1 id="name">JafBath Mini Project</h1>
+        
     <h2 id="hunger"></h2>
+        <p>
+            You need to feed your Tamagotchi so they dont go hungry! But be careful as when you eat you tend to get sleepy as well. 
+        </p>
     <h2 id="sleepiness"></h2>
+        <p>
+            Sleep is extremely important to the survival of your pet. Dont let this number reach zero as your pet could faint!
+        </p>
     <h2 id="boredom"></h2>
+        <p>
+            Just like real pets your Tamagotchi needs exercise in order to stay happy and to decrease your boredom. But be careful as it will also make your pet more hungry!
+        </p>
     <h2 id="age"></h2>
+        <p>
+            As you age your Tamagotchi will <em>Evolve</em> into a stronger being. See how far you can make it!
+        </p>
 
 
     <button id="feed">Feed</button>
