changing timing intervals and values

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </p>
     <h2 id="sleepiness"></h2>
         <p>
-            Sleep is extremely important to the survival of your pet. Dont let this number reach zero as your pet could faint!
+            Sleep is extremely important to the survival of your pet. Dont let this number reach 10 as your pet could faint!
         </p>
     <h2 id="boredom"></h2>
         <p>
