Added first step of animation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <img srcset="https://cdn.pixabay.com/photo/2020/07/21/16/10/pokemon-5426712_960_720.png 1x, https://cdn.pixabay.com/photo/2020/07/21/16/10/pokemon-5426712_1280.png 2x" src="https://cdn.pixabay.com/photo/2020/07/21/16/10/pokemon-5426712_1280.png" alt="Free pokemon pikachu cute vector" title="Download free HD stock image of Pokemon Pikachu">
+
     <h1 id="name">JafBath Mini Project</h1>
         
     <h2 id="hunger"></h2>
