Final commit before refinements

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <img id="pikachu"srcset="https://cdn.pixabay.com/photo/2020/07/21/16/10/pokemon-5426712_960_720.png 1x, https://cdn.pixabay.com/photo/2020/07/21/16/10/pokemon-5426712_1280.png 2x" src="https://cdn.pixabay.com/photo/2020/07/21/16/10/pokemon-5426712_1280.png" alt="Free pokemon pikachu cute vector" title="Download free HD stock image of Pokemon Pikachu">
+    <img id="pikachu"src="https://cdn.pixabay.com/photo/2020/07/21/16/10/pokemon-5426712_1280.png">
 
     <h1 id="name">JafBath Mini Project</h1>
         
@@ -34,11 +34,6 @@
     <button id="play">Play</button>
     <button id="sleep">Sleep</button>
     <button id="lightSwitch">Lights</button>
-    
-
-
-
-
 
 
     <script src="app.js"></script>
